# Inotify-interface

./: .clang-format  .gitignore  CMakeLists.txt
include/: Event.hpp  Inotify.hpp  Logger.hpp  Notifier.hpp
src/: Event.cpp  FileEvent.cpp  Inotify.cpp  Logger.cpp  Notifier.cpp  main.cpp
src/include/: FileEvent.hpp  Inotify.hpp  InotifyError.hpp  Logger.hpp
